--- a/src/app/components/administration/administration.component.html
+++ b/src/app/components/administration/administration.component.html
@@ -1,1 +1,10 @@
-<p>administration works!</p>
+<div id="administration" class="d-flex align-items-center justify-content-center">
+  <div class="row form">
+    <div class="col">
+      <a class="btn btn-primary" [routerLink]="['/administration/brands']">Бренди</a>
+    </div>
+    <div class="col">
+      <a class="btn btn-primary">Моделі</a>
+    </div>
+  </div>
+</div>
