Added administration pages for coffee machine models

--- a/src/app/components/administration/administration.component.html
+++ b/src/app/components/administration/administration.component.html
@@ -4,7 +4,7 @@
       <a class="btn btn-primary" [routerLink]="['/administration/brands']">Бренди</a>
     </div>
     <div class="col">
-      <a class="btn btn-primary">Моделі</a>
+      <a class="btn btn-primary" [routerLink]="['/administration/models']">Моделі</a>
     </div>
   </div>
 </div>
