--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -31,6 +31,7 @@
             <a class="dropdown-item" [routerLink]="['/administration/brands']">Бренди</a>
             <a class="dropdown-item" [routerLink]="['/administration/models']">Моделі</a>
             <a class="dropdown-item" [routerLink]="['/administration/part_types']">Деталі</a>
+            <a class="dropdown-item" [routerLink]="['/administration/characteristics']">Характеристики</a>
           </div>
         </div>
       </li>
