--- a/src/app/components/coffee-machine-new/coffee-machine-new.component.html
+++ b/src/app/components/coffee-machine-new/coffee-machine-new.component.html
@@ -16,7 +16,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row" *ngIf="this.templateId == null">
       <div class="col" style="display: flex">
         <input id="template" type="checkbox" class="form-control custom-checkbox" checked
                (change)="isTemplateChangeHandler()">
