--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -19,7 +19,7 @@
         <a *ngIf="!isUserLoggedIn" class="nav-link" [routerLink]="['/login']">Вхід</a>
       </li>
       <li>
-        <a *ngIf="isLoggedUserIsMaster" class="nav-link" [routerLink]="['/coffee_machine/new']">Додати кавовий апарат</a>
+        <a *ngIf="isLoggedUserIsMaster" class="nav-link" [routerLink]="['/coffee_machine']">Кавові апарат</a>
       </li>
       <li>
         <div *ngIf="isLoggedUserIsAdmin" class="dropdown">
@@ -35,7 +35,7 @@
         </div>
       </li>
       <li>
-        <a *ngIf="isUserLoggedIn" class="nav-link" href="/" (click)=handleLogout()>Logout</a>
+        <a *ngIf="isUserLoggedIn" class="nav-link" href="/" (click)=handleLogout()>Вийти</a>
       </li>
     </ul>
   </nav>
