--- a/src/app/components/service-task/service-task.component.css
+++ b/src/app/components/service-task/service-task.component.css
@@ -2,7 +2,7 @@
   margin-top: -4.5rem !important;
 }
 
-#coffeeMachineDetails {
+#taskDetails {
   height: calc(100vh - 4.5rem);
   width: 100vw;
 
@@ -13,21 +13,10 @@
   padding-top: 11rem;
 }
 
-.table-characteristics {
-  width: 100%;
-}
-
-.table td, .table th {
-  vertical-align: middle;
-}
-
 .row {
   margin-top: 1rem;
-  margin-bottom: 1rem;
 }
 
-.btn-plus {
+.btn-save {
   margin-left: auto;
-  margin-right: auto;
-  margin-top: -1rem;
 }
