--- a/src/app/components/coffee-machines-my/coffee-machines-my.component.html
+++ b/src/app/components/coffee-machines-my/coffee-machines-my.component.html
@@ -1,6 +1,6 @@
-<div id="allCoffeeMachine" class="d-flex align-items-center justify-content-center">
+<div id="myCoffeeMachine" class="d-flex align-items-center justify-content-center">
   <div class="form container">
-    <div class="card-container">
+    <div class="card-container" *ngIf="machines.length > 0">
       <div class="card" *ngFor="let machine of machines">
         <div class="card-body">
           <div class="col">
@@ -47,10 +47,13 @@
             </button>
 
           </div>
-
-
         </div>
       </div>
+    </div>
+    <div *ngIf="machines.length == 0" class="machines-empty">
+      У Вас поки немає кавових апаратів.
+      <br>
+      Щоб додати апарат натисніть на кнопку "+"
     </div>
   </div>
 </div>
@@ -71,55 +74,16 @@
         <div class="modal-container">
           <div class="row">
             <div class="col">
-              <button class="btn btn-success" data-dismiss="modal" [routerLink]="['/coffee_machines/new']">Створити нову
-                машину або шаблон
-              </button>
+              <label for="uniqNumber">Введіть ідентифікатор апарату</label>
+              <input type="text" id="uniqNumber" name="uniqNumber" class="form-control">
             </div>
-            <div class="col">
-              <button class="btn btn-success" data-dismiss="modal" data-toggle="modal" data-target="#fromPatternModal">
-                Створити машину з шаблону
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Скасувати</button>
-        <!--        <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="sendSaveRequest()">Зберегти</button>-->
-      </div>
-    </div>
-  </div>
-</div>
 
-<div class="modal fade" id="fromPatternModal" tabindex="-1" role="dialog" aria-labelledby="fromPatternModalLabel"
-     aria-hidden="true">
-  <div class="modal-dialog my-modal" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title translatable" id="fromPatternModalLabel">Додати кавову машину</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span class="modal-title" aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body my-modal-body">
-        <div class="modal-container">
-          <div class="row">
-            <div class="col">
-              <!--              <button class="btn btn-success" data-dismiss="modal" [routerLink]="['/coffee_machines/new']">Створити нову машину або шаблон</button>-->
-              <div class="scroll-container" style="overflow: auto">
-                <div *ngFor="let template of templates" class="scroll-item card"
-                     (click)="createMachineFromTemplate(template.id)">
-                  <p>{{ template.brand }}</p>
-                  <p>{{ template.model }}</p>
-                </div>
-              </div>
-            </div>
           </div>
         </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Скасувати</button>
-        <!--        <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="sendSaveRequest()">Зберегти</button>-->
+        <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="sendSaveRequest()">Зберегти</button>
       </div>
     </div>
   </div>
